tests/ui/generics/generic-lifetime-trait-impl.stderr
error[E0195]: lifetime parameters or bounds on method `bar` do not match the trait declaration
  --> $DIR/generic-lifetime-trait-impl.rs:19:11
   |
LL |     fn bar<'b, T: Bar<'b>>(self) -> &'b str;
   |           ---------------- lifetimes in impl do not match this method in trait
...
LL |     fn bar<T: Bar<'a>>(self) -> &'a str { panic!() }
   |           ^^^^^^^^^^^^ lifetimes do not match method in trait

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0195`.
